# aos

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.MD  TODO.md  cu.serial-master  cu.serial-slave  init.img  kernel-high.img  kernel8.img  linker.ld  load.py  misc.c  program.img  reviewpad.yml  run-real.sh  run.sh  rust-toolchain  setup.sh  shell.nix
.cargo/: config
boot/: CMakeLists.txt  Cargo.toml  Makefile  link.ld
boot/includes/: raspi.h  util.h
boot/src/: boot.c  exceptions.rs  kernel.c  main.rs  memory.rs  mmu.c  stage1.rs
boot/src/io/: exc.c  timer.c
boot/src/memory/: descriptors.rs
bootcomm/: CMakeLists.txt  aos-bootcomm  main.c
includes/: exc.h  gpio.h  kprintf.h  printf.h  timer.h  uart.h  util.h
init/: Cargo.toml  Makefile  link.ld
init/.cargo/: config
init/src/: main.rs
kernel/: .gdbinit  CMakeLists.txt  Cargo.toml  Makefile  kernel8.img  link.ld
kernel/.cargo/: config
kernel/src/: exceptions.rs  global.rs  init.S  kernel.rs  main.rs  memory.rs  process.rs  scheduler.rs  usb.rs
kernel/src/exceptions/: interruptions.rs  syscalls.rs
kernel/src/kernel/: macros.rs  memory.rs
kernel/src/kernel/devices/: hw.rs  virt.rs
kernel/src/kernel/devices/hw/: frame_buffer.rs  uart.rs  videocore_mbox.rs
kernel/src/kernel/devices/virt/: console.rs
kernel/src/kernel/memory/: mmu.rs
kernel/src/kernel/memory/mmu/: descriptors.rs  mair.rs
kernel/src/memory/: descriptors.rs
kernel/src/scheduler/: context.S  process.rs  timer.rs
misc/: CMakeLists.txt  Makefile  cmake_install.cmake
misc/includes/: uart.h
misc/src/: boot.s
misc/src/util/: kprintf.c
mmio/: Cargo.toml  Makefile
mmio/src/: bcm.rs  delays.rs  dma.rs  dwhci.rs  fb.rs  gpio.rs  io.rs  irq.rs  lib.rs  logger.rs  macros.rs  mbox.rs  syscall.rs  timer.rs  uart.rs  usb.rs
mmio/src/console/: console.rs  fb.rs  mod.rs
mmio/src/process/: handle.rs
mmio/src/timer/: local.rs  physical.rs  system.rs  virt.rs
mmio/src/usb/: device.rs  hcd.rs  pipe.rs
old/: Makefile  kernel8.img
old/src/: kernel.rs  main.rs
old/src/kernel/: devices.rs  exceptions.rs  macros.rs
old/src/kernel/devices/: hw.rs
old/src/kernel/devices/virt/: console.rs
old/src/kernel/exceptions/: handlers.rs  vectors.S
old/src/kernel/memory/: mmu.rs
old/src/kernel/memory/mmu/: descriptors.rs
program/: Cargo.toml  Makefile
program/src/: main.rs
remote/: CMakeLists.txt
remote-ir/: CMakeLists.txt  Cargo.toml  aos-remote.img  link.ld
remote-ir/src/: main.rs
remote/.cargo/: config
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/exceptions/: handlers.rs  vectors.S
shared/src/memory/: mair.rs  mapping.rs  mmu.rs  mod.rs  pages.rs  translate.rs
src/: boot.s  exc.c  exc.s  kernel.c  printf.c  timer.c  uart.c
usb/: Cargo.toml  Makefile
usb/src/: bus.rs  core.rs  host.rs  lib.rs  power.rs
usb/src/core/: core_ahb.rs  core_hard_config.rs  core_irq.rs  core_otg_ctrl.rs  core_periodic_info.rs  core_reset.rs  core_usb_cfg.rs
usb/src/host/: channel.rs  config.rs  port.rs
usb/src/host/channel/: characteristic.rs  interrupts.rs  split.rs  transfer_size.rs
