[package]
name = "aos-boot"
version = "0.1.0"
authors = ["Alban Seurat <alban.seurat@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mmio = { path = "../mmio" }
shared = { path = "../shared" }
cortex-a = { git = "https://github.com/AlbanSeurat/cortex-a", branch = "elr_el1" }
register = "0.3.3"
r0 = "0.2.2"