[package]
name = "aos-boot"
version = "0.1.0"
authors = ["Alban Seurat <alban.seurat@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mmio = { path = "../mmio" }
shared = { path = "../shared" }
cortex-a = "3.0.4"
register = "0.5.1"
r0 = "1.0.0"
