[package]
name = "mmio"
version = "0.1.0"
authors = ["Alban Seurat <alban.seurat@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-a = { git = "https://github.com/AlbanSeurat/cortex-a", branch = "master" }
register = "0.5.1"