[package]
name = "mmio"
version = "0.1.0"
authors = ["Alban Seurat <alban.seurat@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1", default-features = false }
console-traits = "0.3.0"
cortex-a = { git = "https://github.com/AlbanSeurat/cortex-a", branch = "master" }
register = "0.5.1"
font8x8 = { version = "0.2.7", default-features = false, features = ["unicode"] }