[package]
name = "mmio"
version = "0.1.0"
authors = ["Alban Seurat <alban.seurat@me.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1", default-features = false }
console-traits = "0.3.0"
tock-registers = "0.9.0"
aarch64-cpu = "9.4.0"
font8x8 = { version = "0.3.1", default-features = false, features = ["unicode"] }
num-derive = "0.4.2"
linked_list_allocator = "0.9.1"
num-traits = { version = "0.2.14", default-features = false }
