[package]
name = "aos-program"
version = "0.1.0"
authors = ["Alban Seurat <alban.seurat@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mmio = { path = "../mmio" }
shared = { path = "../shared" }
qemu-exit = "1.0.0"
cortex-a = { git = "https://github.com/AlbanSeurat/cortex-a", branch = "master" }
r0 = "1.0.0"
