[package]
name = "shared"
version = "0.1.0"
authors = ["Alban Seurat <alban.seurat@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mmio = { path = "../mmio" }
cortex-a = { git = "https://github.com/AlbanSeurat/cortex-a", branch = "master" }
register = "0.5.1"
itertools = { version = "0.9.0" , default-features = false }