[package]
name = "shared"
version = "0.1.0"
authors = ["Alban Seurat <alban.seurat@me.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mmio = { path = "../mmio" }
# cortex-a = { git = "https://github.com/AlbanSeurat/cortex-a", branch = "master" }
aarch64-cpu = "9.4.0"
tock-registers = "0.9.0"
itertools = { version = "0.12.1", default-features = false }