[package]
name = "usb"
version = "0.1.0"
authors = ["Alban Seurat <alban.seurat@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usb-device = "0.2.7"
register = "0.5.1"
# MUST BE REMOVED AT SOME POINT
mmio = { path = "../mmio" }