[package]
name = "usb"
version = "0.1.0"
authors = ["Alban Seurat <alban.seurat@me.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
usb-device = "0.3.2"
mmio = { path = "../mmio" }
shared = { path = "../shared" }
qemu-exit = "3.0.2"
aarch64-cpu = "9.4.0"
tock-registers = "0.9.0"
r0 = "1.0.0"
